--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Custom styles for this template -->
     <link href="styles/dist/css/product.css" rel="stylesheet">
     <link href="styles/dist/css/animation.css" rel="stylesheet">
-    
+    <link href="styles/dist/css/loader.css" rel="stylesheet">
   </head>
   <div class="leaf">
     <div>  <img src="styles/dist/img/blueplanet.png" height="75px" width="75px"></img></div>
@@ -50,6 +50,7 @@
     <div><img src="http://cdn.clipart-db.ru/rastr/autumn_leaves_025.png" height="75px" width="75px"></div>          
     </div>
   <body>
+    <div class="page">
 <section>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <a class="navbar-brand" href="#">Pandora</a>
@@ -91,14 +92,16 @@
           <img src="styles/dist/img/commerce2.png"  />
          </div>
         <h1 class="display-4 font-weight-normal">Punny headline</h1>
-        <p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple's marketing pages.</p>
+        <p class="lead font-weight-normal">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <a class="btn btn-outline-primary" href="#">Visit our products page</a>
       </div>     
     </div>  
    <div class="container-xl">
       <div class="row">
         <div class="col-md-12">
-          <h2>Featured <b>Products</b></h2>
+         <center> <h2>Featured <b>Products</b></h2></center>
           <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
           <!-- Carousel indicators -->
           <ol class="carousel-indicators">
@@ -402,6 +405,12 @@
   <section class="iq-features">
     <div class="container">
      <center> <h1>Our Services</h1></center>
+     <div class="service-info">
+       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
+         aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+     </div>
        <div class="row align-items-center">
           <div class="col-lg-3 col-md-12"></div>
           <div class="col-lg-6 col-md-12">
@@ -518,8 +527,8 @@
         </div>
       </div>
     </footer>
-
-
+<!-- Animation Loader-->
+    <div id="loading"></div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -528,6 +537,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script src="styles/dist/js/bootstrap.min.js"></script>
     <script src="styles/dist/js/holder.min.js"></script>
+    <script src="styles/dist/js/loader.js"></script>
     <script>
       Holder.addTheme('thumb', {
         bg: '#55595c',
@@ -637,6 +647,6 @@
         });
       });	
       </script>
-
+    </div>
   </body>
 </html>
